# rusty-toaster

./: .gitignore  Dockerfile  README.md  build.sh  package-lock.json  permissions.sh
photo-server/: Cargo.toml  package-lock.json  start-server.sh
photo-server/.cargo/.cargo/: config.toml
photo-server/src/: controllers.rs  lib.rs  main.rs
photo-server/src/controllers/: hello.rs  hello_spec.rs  photo.rs  ui.rs
tests/: package-lock.json  package.json  tsconfig.json
tests/src/: perf.test.ts
ui/: README.md  angular.json  package-lock.json  package.json  tsconfig.spec.json
ui/src/: styles.scss
ui/src/app/: app.component.html  app.component.spec.ts  app.component.ts  app.config.ts  app.module.ts  app.routes.ts
ui/src/app/album/: album.component.html  album.component.scss  album.component.ts
ui/src/app/album-selector/: album-selector.component.html  album-selector.component.scss  album-selector.component.spec.ts  album-selector.component.ts
ui/src/app/global-container/: global-container.component.html  global-container.component.scss  global-container.component.spec.ts  global-container.component.ts
ui/src/app/image/: image.component.html  image.component.scss  image.component.ts
ui/src/app/loader/: loader.component.html  loader.component.scss  loader.component.ts
ui/src/app/pages/home-page/: home-page.component.html  home-page.component.ts
ui/src/app/services/: albums.service.ts
ui/src/environments/: environment.prod.ts  environment.ts
