[package]
name = "photo_server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "photo_server"
path = "src/main.rs"

[lib]
name = "lib"
path = "src/lib.rs"


[dependencies]
rocket = { version = "0.5.0-rc.3", features = ["json", "tls"] }
dashmap = "6.1.0"
mime_guess = "2.0"
tokio = { version = "1", features = ["fs", "sync"] }
bytes = "1.4.0"
lazy_static = "1.5.0"
serde = { version = "1.0", features = ["derive"] }
num_cpus = "1.15.0"